# dapp

./: .editorconfig  .env.beta  .env.local  .env.test  .gitignore  Cargo.toml  Makefile  angular.json  docker-builder.yml  docker-compose.yml  local.env  package-lock.json  package.json  readme.md  testnet.env.example  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  tsconfig.web.json
.cargo/: audit.toml
.docker/builder/: Dockerfile
.github/workflows/: contract.yml  web.yml
neardev_old/: dev-account  dev-account.env
src/contract/: Dockerfile  build.sh  build_in_docker.sh  deploy.ts  deployRefFarming.ts
src/contract/counter/: Cargo.toml  counter.rs  simulator.rs  unit.rs
src/contract/depositum/: Cargo.toml  depositum.js  depositum.rs  depositum.ts  simulator.rs
src/contract/depositum/res/: ref_farming_strategy.wasm
src/contract/ref_farming_strategy/: Cargo.toml  build.sh  ref_farming_strategy.rs  sim_tests.rs  simulator.rs
src/contract/simple_token/: Cargo.toml  simple_token.rs
src/contract/testing/: Cargo.toml
src/web/: config.js  config.ts  global.css  index.html  index.js  manifest.webmanifest  styles.scss  test.ts  wallet.js
src/web/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  wallet.service.ts
src/web/asset/: manifest.webmanifest
src/web/environments/: environment.ts
tests/integration/: utils.rs
util/: create-wnear-token.ts  index.ts  near-shortcut.sh  setup-env-s1.ts  setup-env-s2.ts  setup-stage.sh  setup-testnet.ts  setup.ts  simple_token_delete.sh  simple_token_deploy.sh
(+6 files in other folders)
