[package]
name = "depositum"
version = "1.0.0-beta.0"
edition = "2018"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "depositum.rs"
test = true
doctest = false
bench = false
doc = false

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.1"

[dependencies]
near-sdk = "4.0.0-pre.2"
near-contract-standards = "4.0.0-pre.2"
